<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical"
    android:padding="16dp">

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/refresh_token"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/refresh_token" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/get_user_info"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/get_user_info" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/token_introspection"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/token_introspection" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/log_out"
        style="@style/Widget.AppCompat.Button.Colored"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/log_out" />

</LinearLayout>

